--- a/index.css
+++ b/index.css
@@ -61,11 +61,11 @@ the anchor elements will not have any underlines or other decorations applied to
 } */
 
 
-.footer {
+/* .footer {
     position: absolute;
     bottom: 0;
     width: 644px;
     height: 20px;
     margin: 0 auto;
     padding-bottom: 15px;
-}
+} */
