--- a/index.css
+++ b/index.css
@@ -54,9 +54,27 @@ the anchor elements will not have any underlines or other decorations applied to
     height: 10em;
 }
 
+.horizontal {
+    background-color: #f2f2f2;
+    border: 0;
+    margin: 0;
+    height: 1px;
+
+}
+
 .blog-image {
     height: 112px;
     width: 112px;
+}
+
+.tags {
+    border: 1px solid #F2F2F2;
+    border-radius: 100px;
+    padding: 2px 8px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    font-size: 13px;
+    background-color: #F2F2F2;
 }
 
 /* .mascot {
