--- a/index.css
+++ b/index.css
@@ -68,14 +68,25 @@ the anchor elements will not have any underlines or other decorations applied to
 }
 
 .tags {
-    border: 1px solid #F2F2F2;
-    border-radius: 100px;
-    padding: 2px 8px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    font-size: 13px;
-    background-color: #F2F2F2;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.7rem 2rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    backface-visibility: hidden;
+    border: 0.3rem solid transparent;
+    border-radius: 3rem;
+    border-color: transparent;
+    background-color: black;
+    color: white;
+    transition: transform 0.2s cubic-bezier(0.235, 0, 0.05, 0.95);
 }
+
 
 /* .mascot {
     border-radius: 50%;
